Release 0.1 -> Release 0.2
  * Stream writing improved to be much faster via the implementation of the 
	pdfputc function (instead of pdfprintf with a single character in the
	format string)

  * Font handling improved so that the font name is only put into the text
	stream when the font name changes or at the start of the page
	description. This reduces the size of the output documents in some
	cases dramatically.

  * Introduction of a Windows DLL project for MS Visual Studio.

  * Fixed various errors in the documentation. Also added more man pages so
	all external functions are documented by a man page.

  * Improved the commenting in some of the code (added function descriptions
  	to the source files).

  * Decided that we can assume that there are never any \0's in text streams
	and therefore improved the textstream writing code.

  * Improved the speed of the library with the manytextboxes time trial.

  * Fixed the blank line before the ET at the end of text streams. This was a
	bug introduced by development of 0.2 and should not have affected
	any users.

  * Fixed the segmentation faults that were occuring. These were because of a
	malloc off by one bug, but my use of MALLOC_CHECK_ had obscured them
	during testing...

  * Improved the speed of the xref table creation, which should help the
	manypages timetrial.

  * Kids dictionary element of the Pages object is now handled as a special
	case because appending to this array was too slow. This shaved 13
	seconds off the manypages test run on my P II 300 laptop...
