@@ -3,3 +3,8 @@ Thu Jul 27 01:05:08 EST 2000 - 0.035000 , 203.450000 , 35.000000 , 4 output.pdf
 Thu Jul 27 11:10:11 EST 2000 - 0.057900 , 205.360000 , 85.000000 , 4 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 0.051100 , 205.320000 , 85.000000 , 4 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 0.050500 , 205.310000 , 85.000000 , 4 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 0.057800 , 206.290000 , 85.000000 , 4 hello-clibpdf-202r1.pdf
+Sun Aug 13 09:00:01 EST 2000 - 0.050900 , 205.980000 , 85.000000 , 4 hello-clibpdf-202r1.pdf
+Mon Aug 14 09:00:01 EST 2000 - 0.050600 , 205.590000 , 85.000000 , 4 hello-clibpdf-202r1.pdf
+Tue Aug 15 09:00:01 EST 2000 - 0.050700 , 205.780000 , 85.000000 , 4 hello-clibpdf-202r1.pdf
+Mon Aug 21 19:50:05 EST 2000 - 0.028100 , 162.100000 , 64.000000 , 4 hello-clibpdf-202r1.pdf
