@@ -3,3 +3,9 @@ Thu Jul 27 01:05:08 EST 2000 - 0.024800 , 113.000000 , 30.000000 , 4 output.pdf
 Thu Jul 27 11:10:11 EST 2000 - 0.029900 , 119.000000 , 33.000000 , 4 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 0.030000 , 119.000000 , 33.000000 , 4 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 0.030000 , 119.000000 , 33.000000 , 4 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 0.026400 , 119.000000 , 20.000000 , 4 hello-panda-02.pdf
+Sun Aug 13 01:14:38 EST 2000 - 0.020500 , 119.000000 , 20.000000 , 4 hello-panda-02.pdf
+Sun Aug 13 09:00:01 EST 2000 - 0.020400 , 119.000000 , 20.000000 , 4 hello-panda-02.pdf
+Mon Aug 14 09:00:01 EST 2000 - 0.020400 , 119.000000 , 20.000000 , 4 hello-panda-02.pdf
+Tue Aug 15 09:00:01 EST 2000 - 0.020400 , 119.000000 , 20.000000 , 4 hello-panda-02.pdf
+Mon Aug 21 19:50:05 EST 2000 - 0.009400 , 97.000000 , 13.000000 , 4 hello-panda-02.pdf
