@@ -3,3 +3,8 @@ Thu Jul 27 01:05:08 EST 2000 - 0.044800 , 206.770000 , 75.000000 , 4 output.pdf
 Thu Jul 27 11:10:11 EST 2000 - 0.059900 , 210.040000 , 108.000000 , 4 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 0.060000 , 210.660000 , 108.000000 , 4 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 0.059900 , 210.770000 , 108.000000 , 4 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 0.061600 , 210.530000 , 108.000000 , 4 hello-pdflib-30.pdf
+Sun Aug 13 09:00:01 EST 2000 - 0.052000 , 209.870000 , 108.000000 , 4 hello-pdflib-30.pdf
+Mon Aug 14 09:00:01 EST 2000 - 0.051600 , 209.820000 , 108.000000 , 4 hello-pdflib-30.pdf
+Tue Aug 15 09:00:01 EST 2000 - 0.051700 , 209.830000 , 108.000000 , 4 hello-pdflib-30.pdf
+Mon Aug 21 19:50:05 EST 2000 - Did not make
