@@ -1,1 +1,6 @@
 Mon Aug 7 20:51:31 EST 2000 - 5.375000 , 163.500000 , 2709.000000 , 3616 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 6.557200 , 206.280000 , 2730.000000 , 3616 manypages-clibpdf-202r1.pdf
+Sun Aug 13 09:00:01 EST 2000 - 6.575200 , 206.280000 , 2730.000000 , 3616 manypages-clibpdf-202r1.pdf
+Mon Aug 14 09:00:01 EST 2000 - 6.558900 , 206.280000 , 2730.000000 , 3616 manypages-clibpdf-202r1.pdf
+Tue Aug 15 09:00:01 EST 2000 - 6.576500 , 206.280000 , 2730.000000 , 3616 manypages-clibpdf-202r1.pdf
+Mon Aug 21 19:50:05 EST 2000 - 5.614800 , 162.150000 , 2709.000000 , 3616 manypages-clibpdf-202r1.pdf
