@@ -1,1 +1,7 @@
 Mon Aug 7 20:51:31 EST 2000 - 21.290000 , 96.000000 , 2669.000000 , 2856 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 16.702900 , 120.000000 , 3301.000000 , 2856 manypages-panda-02.pdf
+Sun Aug 13 01:14:38 EST 2000 - 16.597200 , 120.000000 , 3301.000000 , 3336 manypages-panda-02.pdf
+Sun Aug 13 09:00:01 EST 2000 - 16.761200 , 120.000000 , 3301.000000 , 3336 manypages-panda-02.pdf
+Mon Aug 14 09:00:01 EST 2000 - 16.758400 , 120.000000 , 3301.000000 , 3336 manypages-panda-02.pdf
+Tue Aug 15 09:00:01 EST 2000 - 16.854200 , 120.000000 , 3301.000000 , 3336 manypages-panda-02.pdf
+Mon Aug 21 19:50:05 EST 2000 - 8.440900 , 97.000000 , 3140.320000 , 3120 manypages-panda-02.pdf
