@@ -2,3 +2,8 @@ Thu Jul 27 01:05:08 EST 2000 - Did not make
 Thu Jul 27 11:10:11 EST 2000 - 40.464300 , 209.000000 , 210421.000000 , 4020 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 40.450200 , 209.000000 , 210421.000000 , 4020 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 42.056600 , 374.450000 , 210423.970000 , 4020 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 41.190000 , 209.000000 , 210421.000000 , 4020 manypages-pdflib-30.pdf
+Sun Aug 13 09:00:01 EST 2000 - 41.175200 , 209.000000 , 210421.000000 , 4020 manypages-pdflib-30.pdf
+Mon Aug 14 09:00:01 EST 2000 - 41.187700 , 209.000000 , 210421.000000 , 4020 manypages-pdflib-30.pdf
+Tue Aug 15 09:00:01 EST 2000 - 41.078100 , 209.000000 , 210421.000000 , 4020 manypages-pdflib-30.pdf
+Mon Aug 21 19:50:05 EST 2000 - Did not make
