@@ -3,3 +3,8 @@ Thu Jul 27 01:05:08 EST 2000 - 1.451400 , 202.290000 , 331.000000 , 564 output.p
 Thu Jul 27 11:10:11 EST 2000 - 1.511000 , 206.280000 , 382.000000 , 564 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 1.510200 , 206.280000 , 382.000000 , 564 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 1.511100 , 206.280000 , 382.000000 , 564 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 1.588600 , 206.280000 , 382.000000 , 564 manytextboxes-clibpdf-202r1.pdf
+Sun Aug 13 09:00:01 EST 2000 - 1.514100 , 206.280000 , 382.000000 , 564 manytextboxes-clibpdf-202r1.pdf
+Mon Aug 14 09:00:01 EST 2000 - 1.520700 , 206.280000 , 382.000000 , 564 manytextboxes-clibpdf-202r1.pdf
+Tue Aug 15 09:00:01 EST 2000 - 1.514500 , 206.280000 , 382.000000 , 564 manytextboxes-clibpdf-202r1.pdf
+Mon Aug 21 19:50:05 EST 2000 - 1.090800 , 163.150000 , 360.000000 , 564 manytextboxes-clibpdf-202r1.pdf
