@@ -3,3 +3,9 @@ Thu Jul 27 01:05:08 EST 2000 - 0.949600 , 114.000000 , 232.000000 , 252 output.p
 Thu Jul 27 11:10:11 EST 2000 - 1.985600 , 120.000000 , 997.000000 , 252 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 1.982200 , 120.000000 , 997.000000 , 252 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 2.009500 , 120.000000 , 997.000000 , 252 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 3.890400 , 120.000000 , 883.000000 , 252 manytextboxes-panda-02.pdf
+Sun Aug 13 01:14:38 EST 2000 - 3.753700 , 120.000000 , 883.000000 , 252 manytextboxes-panda-02.pdf
+Sun Aug 13 09:00:01 EST 2000 - 3.790900 , 120.000000 , 883.000000 , 252 manytextboxes-panda-02.pdf
+Mon Aug 14 09:00:01 EST 2000 - 3.756600 , 120.000000 , 883.000000 , 252 manytextboxes-panda-02.pdf
+Tue Aug 15 09:00:01 EST 2000 - 3.788400 , 120.000000 , 883.000000 , 252 manytextboxes-panda-02.pdf
+Mon Aug 21 19:50:05 EST 2000 - 1.076500 , 98.000000 , 876.000000 , 252 manytextboxes-panda-02.pdf
