@@ -3,3 +3,8 @@ Thu Jul 27 01:05:08 EST 2000 - 2.472400 , 205.000000 , 123.000000 , 20 output.pd
 Thu Jul 27 11:10:11 EST 2000 - 2.480100 , 209.000000 , 156.000000 , 20 output.pdf
 Fri Jul 28 09:00:00 EST 2000 - 2.462900 , 209.000000 , 156.000000 , 20 output.pdf
 Sat Jul 29 09:00:00 EST 2000 - 2.474700 , 209.000000 , 156.000000 , 20 output.pdf
+Sat Aug 12 13:31:41 EST 2000 - 2.680000 , 209.000000 , 156.000000 , 20 manytextboxes-pdflib-30.pdf
+Sun Aug 13 09:00:01 EST 2000 - 2.477200 , 209.000000 , 156.000000 , 20 manytextboxes-pdflib-30.pdf
+Mon Aug 14 09:00:01 EST 2000 - 2.478700 , 209.000000 , 156.000000 , 20 manytextboxes-pdflib-30.pdf
+Tue Aug 15 09:00:01 EST 2000 - 2.479900 , 209.000000 , 156.000000 , 20 manytextboxes-pdflib-30.pdf
+Mon Aug 21 19:50:05 EST 2000 - Did not make
