@@ -1,5 +1,7 @@
 #!/bin/bash
 
+# ./wrapper "." "manytextboxes" "panda" "100"
+
 # Check we are not running already
 data=`ps -aux | grep wrapper | grep -v emacs | grep -v grep | wc -l | tr -d " "`
 if [ $data -gt 2 ]
@@ -20,31 +22,44 @@ starttime=`date`
 # performance has improved or degraded.
 
 # This variable is a list of libaries to test
-if [ `echo $3 | wc -c | tr -d " "` -gt 0 ]
+if [ `echo $3 | wc -c | tr -d " "` -gt 1 ]
 then
+  echo "Libaries on command line $3" `echo $3 | wc -c | tr -d " "`
   libs=$3
 else
   libs="clibpdf-202r1 pdflib-30 panda-02"
 fi
 
+echo Libaries are $libs
+
 # This variable is a list of tests -- this can also be overwridden on the
 # command line if we only want to run one test
-if [ `echo $2 | wc -c | tr -d " "` -gt 0 ]
+if [ `echo $2 | wc -c | tr -d " "` -gt 1 ]
 then
+  echo "Tests on command line $2" `echo $2 | wc -c | tr -d " "`
   tests=$2
 else
   tests="hello manytextboxes manypages"
 fi
 
+echo Tests are $tests
+
 # How many times per test
-if [ `echo $4 | wc -c | tr -d " "` -gt 0 ]
+if [ `echo $4 | wc -c | tr -d " "` -gt 1 ]
 then
   number=$4
 else
   number=100
 fi
 
+echo Iterations is $number
+
 delay=1
+
+echo Delay between is $delay seconds
+
+# Make sure the math stuff is there
+make math
 
 for test in $tests
 do
@@ -69,6 +84,10 @@ do
         count=$(( $count + 1 ))
         sleep $delay
       done
+
+      # Save the file that we made so that we have something to show the kids
+      mv -f $test-$lib.pdf $test-$lib.prev.pdf
+      mv -f output.pdf $test-$lib.pdf
 
       # Do something with the results
       echo "Analysing results"
@@ -96,7 +115,7 @@ do
       done
 
       # Output the results to the database
-      echo $starttime "-" `./math $runningtime / $number` "," `./math $runningmajorpf / $number` "," `./math $runningminorpf / $number` "," `du -sk output.pdf` >> $test-$lib.db
+      echo $starttime "-" `./math $runningtime / $number` "," `./math $runningmajorpf / $number` "," `./math $runningminorpf / $number` "," `du -sk $test-$lib.pdf` >> $test-$lib.db
     fi
   done
 done
