@@ -36,3 +36,8 @@ Release 0.1 -> Release 0.2
 	case because appending to this array was too slow. This shaved 13
 	seconds off the manypages test run on my P II 300 laptop...
 
+  * Changed the way the xref entries are counted. By the way, having the xref 
+	entry count wrong causes xpdf to core dump.
+
+  * Started implementing TIFF support, this means that libtiff is now required
+	by Panda.
